# apksearch

./: .flake8  .pre-commit-config.yaml  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg
apksearch/: __init__.py  entities.py  parsing.py  search.py
tests/: test_parsing.py  test_search.py
tests/data/: pogo.0.203.1.txt  pogo.0.243.0.txt  pogo.2021031800.apk.txt  pogo.2021032200.apk.txt  pogo.2021032200.bundle.txt  pogo.2022070700.apk.download.txt  pogo.2022070700.apk.txt  pogo.2022070700.bundle.download.txt  pogo.2022070700.bundle.txt  pogo.2022070701.apk.download.txt  pogo.2022070701.apk.txt  pogo_samsung.0.203.1.txt  pogo_samsung.0.243.0.txt  search_result.txt
tests/web_results/: pogo.html  pogo_0.241.0.html  pogo_0.243.0.html  pogo_0.243.0_32_apk.html  pogo_0.243.0_32_apk_download.html  pogo_0.243.0_32_bundle.html  pogo_0.243.0_32_bundle_download.html  pogo_0.243.0_64_apk.html  pogo_0.243.0_64_apk_download.html  pogo_0.243.0_64_bundle.html  pogo_0.243.0_64_bundle_download.html  pogo_samsung.html  primary_search.html
