[metadata]
name = APKMirror Search
version = 0.0.2
description = Add the ability to search and grab download links from APKMirror
license = GPL3
readme = README.md
homepage = https://github.com/expl0dingbanana/apksearch
repository = https://github.com/expl0dingbanana/apksearch

[options]
packages = find:
install_requires =
    aiohttp
    bs4
    html5lib
